infra/k8s/event-bus-deployment.yml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector: # Here we are telling to Deployment which object with this label should take care
    matchLabels:
      app: event-bus
  template:
    metadata: # We are defining here the label 'app' with value 'event-bus' inside each replica
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: tamyvivas/ms-event-bus
          imagePullPolicy: Always # 'Never' will use the image built locally from your image cache instead of attempting to pull
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
