infra/k8s/moderation-deployment.yml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector: # Here we are telling to Deployment which object with this label should take care
    matchLabels:
      app: moderation
  template:
    metadata: # We are defining here the label 'app' with value 'moderation' inside each replica
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: tamyvivas/ms-moderation
          imagePullPolicy: Always # 'Never' will use the image built locally from your image cache instead of attempting to pull
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP # NodePort just for Dev purposes
  selector:
    app: moderation
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
