infra/k8s/posts-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-srv
spec:
  type: NodePort # NodePort just for Dev purposes
  selector:
    app: posts
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
